# eth-p2p-security-research-data

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker_telemetry/: Dockerfile  entrypoint.py  pyproject.toml
notebooks/: plot_pcap_to_time_series.ipynb
tcp_perf/: Dockerfile  entrypoint.py
utils/: copy_and_commit_pcaps.sh  rename_pcaps.py
