[tool.poetry]
name = "perftools"
version = "0.1.0"
description = "Performance testing tools"
authors = ["Kirill Varlamov <kirill@ongrid.pro>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
